moved on git hub
added the poor tweeter app on git hub

--- a/article/templates/index.html
+++ b/article/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue-js | Django | Crud App</title>
+    <title>Vue-js | Django | Poor Twitter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A simple crud app made with the vue js and django">
+    <meta name="description" content="a poor tweeter app made based on article modele">
 
-    <meta name="keywords" content="vuejs, django, crudapp, restapi">
+    <meta name="keywords" content="vuejs, django, articleapp, restapi">
     <!-- bootstap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- boostrap css -->
@@ -133,7 +133,7 @@
     <div id="starting">
       <div class="container">
         <div class="row">
-          <h1>All tweets
+          <h1>Poor Tweeter
           <button  type="button" class="btn btn-primary" data-toggle="modal" data-target="#addArticleModal">New Tweet</button>
           </h1>
           &emsp;
